Project Management: Fixed invisibility of links.

--- a/src/css/popupProjectManagement.css
+++ b/src/css/popupProjectManagement.css
@@ -2,7 +2,7 @@
 .popup-new-project {
   padding: 40px;
   margin: 0 auto;
-	background-color: white;
+	background-color: transparent;
 	color: black;
 	height: 100%;
 }
